Changed player storage from hashmap to list, added interface methods.